better on email

--- a/src/templates/register.html
+++ b/src/templates/register.html
@@ -106,7 +106,7 @@
         <div class="content">
             <div class="welcome-icon">🎉</div>
 
-            <p>Hello there,</p>
+            <p>Hello {{username}},</p>
 
             <p>Thank you for joining us! We're thrilled to have you as part of our community. Your account has been
                 successfully created and is ready to use.</p>
