better setting page

--- a/src/templates/2fa.html
+++ b/src/templates/2fa.html
@@ -58,7 +58,7 @@
         <h1 class="header">Two-Factor Authentication Enabled</h1>
         <div class="security-badge">🔒</div>
 
-        <p>Hello there,</p>
+        <p>Hello {{username}},</p>
 
         <p>Two-factor authentication (2FA) has been successfully enabled for your account. This adds an extra layer of
             security to protect your account.</p>
