--- a/src/templates/code.html
+++ b/src/templates/code.html
@@ -90,7 +90,7 @@
         </div>
 
         <div class="content">
-            <p>Hello,</p>
+            <p>Hello {{username}},</p>
 
             <p>A verification code has been requested for your account. Please use the following code to proceed:</p>
 
