--- a/src/templates/forget.html
+++ b/src/templates/forget.html
@@ -147,7 +147,7 @@
         </ul>
 
         <center>
-            <a href="#" class="button">Review Account Security</a>
+            <a href="https://hydrofundsolutions.com/settings" class="button">Review Account Security</a>
         </center>
 
         <div class="footer">
